prevent location cards from being too small
when the cards are too narrow, the title misaligns, and everything in the card gets pushed downwards and looks messy

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -247,7 +247,7 @@ nav button.selected {
 #locations>.grid {
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(275px, 1fr));
     gap: 50px;
 }
 
